[gd_scene load_steps=12 format=3 uid="uid://bpwmck6ndoo6o"]

[ext_resource type="Script" uid="uid://b51uhpmrsglm" path="res://scripts/dominoes_level.gd" id="1_ahtht"]
[ext_resource type="PackedScene" uid="uid://dhamkvtbdtbed" path="res://scenes/capture_point.tscn" id="2_gdtbw"]
[ext_resource type="PackedScene" uid="uid://dro31wxbi680v" path="res://scenes/game_camera.tscn" id="3_lhfmt"]
[ext_resource type="PackedScene" uid="uid://dartuwkh4q1a7" path="res://scenes/domino_block.tscn" id="4_gjmw3"]
[ext_resource type="Environment" uid="uid://bedt4yliqs882" path="res://scenes/camera_environment.tres" id="4_lhfmt"]
[ext_resource type="PackedScene" uid="uid://kb6wm8lyrkvh" path="res://scenes/hand_rack.tscn" id="5_0aixa"]
[ext_resource type="PackedScene" uid="uid://dk2qcxsr5sajx" path="res://scenes/button_box_3d.tscn" id="6_gdtbw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5ildb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_br6f8"]
size = Vector3(40, 0.25, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1x550"]
albedo_color = Color(0.5264201, 0.3272072, 0.057221487, 1)
metallic_specular = 0.15

[sub_resource type="PlaneMesh" id="PlaneMesh_5ildb"]
material = SubResource("StandardMaterial3D_1x550")
size = Vector2(40, 16)

[node name="TableSpace" type="Node3D"]
script = ExtResource("1_ahtht")
next_level = "res://scenes/main_menu.tscn"

[node name="CapturePoint" parent="." instance=ExtResource("2_gdtbw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8236637, 0.25, 6.5)
collection_speed = 35.0

[node name="Camera3D" parent="." instance=ExtResource("3_lhfmt")]
transform = Transform3D(1, 0, 0, 0, 0.26927286, 0.96306396, 0, -0.96306396, 0.26927286, 0, 8.933517, 4.1343374)
environment = ExtResource("4_lhfmt")

[node name="TableTop" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.036530018, 0.082410336, -0.19729328)
collision_layer = 4
physics_material_override = SubResource("PhysicsMaterial_5ildb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TableTop"]
shape = SubResource("BoxShape3D_br6f8")

[node name="TableTop2" type="MeshInstance3D" parent="TableTop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00011444092, -0.017716289, -0.0002014637)
mesh = SubResource("PlaneMesh_5ildb")
skeleton = NodePath("../..")

[node name="Hand" parent="." instance=ExtResource("5_0aixa")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -4.2261543, -0.75158834, 9.84432)
collection_speed = 50.0

[node name="DominoBlock" parent="Hand" instance=ExtResource("4_gjmw3")]
transform = Transform3D(0.5969813, 0.8022552, -1.7616511e-08, -0.8022552, 0.5969813, -3.506769e-08, -1.7616507e-08, 3.506769e-08, 1, 3.4089298, 2.3598084, -2.7246194)
collision_layer = 2
collision_mask = 7

[node name="DominoBlock2" parent="Hand" instance=ExtResource("4_gjmw3")]
transform = Transform3D(0.572419, 0.8016894, 0.17213629, -0.76190895, 0.5976252, -0.249678, -0.30303717, 0.011768229, 0.95290613, 3.1717398, 2.6172392, -1.4268975)
collision_layer = 2
collision_mask = 7

[node name="DominoBlock3" parent="Hand" instance=ExtResource("4_gjmw3")]
transform = Transform3D(0.572419, 0.8016894, 0.17213629, -0.76190895, 0.5976252, -0.249678, -0.30303717, 0.011768229, 0.95290613, 2.7682006, 2.2117422, 0.16213417)
collision_layer = 2
collision_mask = 7

[node name="DominoBlock4" parent="Hand" instance=ExtResource("4_gjmw3")]
transform = Transform3D(0.48666862, 0.84388196, 0.22586969, -0.78066015, 0.5361541, -0.32110554, -0.39207613, -0.020055499, 0.91971415, 2.408214, 2.2412744, 1.5622131)
collision_layer = 2
collision_mask = 7

[node name="DominoBlock5" parent="Hand" instance=ExtResource("4_gjmw3")]
transform = Transform3D(0.48666862, 0.84388196, 0.22586969, -0.78066015, 0.5361541, -0.32110554, -0.39207613, -0.020055499, 0.91971415, 2.3657084, 2.2779675, 2.5944772)
collision_layer = 2
collision_mask = 7

[node name="BuyWildcard" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.38983, 0.70099545, 5.1690845)

[node name="Button3D" parent="BuyWildcard" instance=ExtResource("6_gdtbw")]
transform = Transform3D(1.484129, 0, 0, 0, 0.19, 0, 0, 0, 1.3122839, 0.63788605, -0.48458815, 0)

[node name="MeshContainer" type="Node3D" parent="BuyWildcard"]
transform = Transform3D(0.10279058, 0.347393, 0.30720872, -0.45045373, -1.9689958e-08, 0.1507197, 0.110229425, -0.32394922, 0.329441, 0, 0, 0)

[node name="Label3D" type="Label3D" parent="BuyWildcard"]
transform = Transform3D(0.9184671, 0, 0.3954974, 0, 1, 0, -0.3954974, 0, 0.9184671, -5.130869, 4.3420105, -0.35794067)
billboard = 1
render_priority = 127
outline_render_priority = 126
text = "-50 Coins"
font_size = 22
outline_size = 9

[connection signal="cancel_button_pressed" from="Camera3D" to="." method="_on_cancel_button_pressed"]
[connection signal="child_exiting_tree" from="TableTop" to="." method="_on_table_top_child_exiting_tree"]
[connection signal="child_exiting_tree" from="Hand" to="." method="_on_hand_child_exiting_tree"]
[connection signal="button_pressed" from="BuyWildcard/Button3D" to="." method="_on_buy_wild_button_pressed"]
